--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,136 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
-
-    <TextView
-        android:id="@+id/Score"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Score"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        tools:ignore="InvalidId" />
-
-    <LinearLayout
+    <FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_height="match_parent"
         >
-
-
-        <Button
-            android:id="@+id/etgar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:text="אתגר"
-            />
-
-        <Button
-            android:id="@+id/multiply20"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"
-            android:text="כפל עד 20" />
-
-        <Button
-            android:id="@+id/timeTable"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:text="לוח הכפל" />
-
-
-    </LinearLayout>
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="133dp"
-            android:layout_height="104dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="3dp"
-            android:background="@color/yellow"
-            android:gravity="center"
-            android:hint="number 1"
-            android:id="@+id/num1"/>
-
-        <TextView
-            android:layout_width="131dp"
-            android:layout_height="94dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="3dp"
-            android:background="@color/yellow"
-            android:gravity="center"
-            android:text="X"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="131dp"
-            android:layout_height="92dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="3dp"
-            android:background="@color/yellow"
-            android:gravity="center"
-            android:hint="number 2"
-            android:id="@+id/num2"/>
-
-        <EditText
-            android:layout_width="131dp"
-            android:layout_height="78dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="3dp"
-            android:background="@color/yellow"
-            android:hint="put in your answer"
-            android:id="@+id/num3"
-            android:gravity="center"/>
-
         <Button
-            android:id="@+id/check"
-            android:layout_width="131dp"
-            android:layout_height="78dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Rate"
+            android:id="@+id/Rate"
+            tools:ignore="InvalidId" />
+        <TextView
+            android:id="@+id/Score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:text="Score"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            tools:ignore="InvalidId" />
 
-            android:text="check answer"
-            />
-
-        <Button
-            android:id="@+id/save"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/red"
-            android:text="save" />
+            android:orientation="horizontal"
+            >
 
-        <Button
-            android:id="@+id/show"
+
+            <Button
+                android:id="@+id/etgar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:text="אתגר"
+                />
+
+            <Button
+                android:id="@+id/multiply20"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="5dp"
+                android:text="כפל עד 20" />
+
+            <Button
+                android:id="@+id/timeTable"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:text="לוח הכפל" />
+
+
+        </LinearLayout>
+
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:text="show all users" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/num1"
+                android:layout_width="133dp"
+                android:layout_height="104dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp"
+                android:background="@color/yellow"
+                android:gravity="center"
+                android:hint="number 1" />
+
+            <TextView
+                android:layout_width="131dp"
+                android:layout_height="94dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp"
+                android:background="@color/yellow"
+                android:gravity="center"
+                android:text="X"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/num2"
+                android:layout_width="131dp"
+                android:layout_height="92dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp"
+                android:background="@color/yellow"
+                android:gravity="center"
+                android:hint="number 2" />
+
+            <EditText
+                android:id="@+id/num3"
+                android:layout_width="131dp"
+                android:layout_height="78dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp"
+                android:background="@color/yellow"
+                android:gravity="center"
+                android:hint="put in your answer" />
+
+            <Button
+                android:id="@+id/check"
+                android:layout_width="131dp"
+                android:layout_height="78dp"
+                android:layout_gravity="center"
+
+                android:text="check answer" />
+
+            <Button
+                android:id="@+id/MSave"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/red"
+                android:text="save" />
+
+            <Button
+                android:id="@+id/show"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="show all users" />
+
+
+        </LinearLayout>
 
 
 
     </LinearLayout>
 
-    </LinearLayout>
+    </FrameLayout>
+
+</ScrollView>
 
 
