--- a/app/src/main/res/layout/fragment_showusers.xml
+++ b/app/src/main/res/layout/fragment_showusers.xml
@@ -29,6 +29,7 @@
                 android:text="Rate" />
 
             <TextView
+                android:id="@+id/TV2"
                 android:layout_width="100dp"
                 android:layout_gravity="center"
                 android:layout_height="wrap_content"
@@ -37,14 +38,14 @@
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Add Picture" />
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Add Picture" />
 
-        <ImageView
+    <ImageView
             android:id="@+id/imageView2"
             android:layout_width="198dp"
             android:layout_height="324dp"
