--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -4,22 +4,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="150dp"
     android:orientation="horizontal">
 
 
 
     <ImageView
         android:id="@+id/FruitImage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+
+         />
 
     <TextView
         android:id="@+id/FruitName"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="127dp"
-        android:layout_weight="1"
         android:text="TextView" />
 </LinearLayout>
