--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -143,7 +143,7 @@
                     android:id="@+id/show"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="show all users" />
+                    android:text="show all Users" />
 
 
             </LinearLayout>
