--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -11,23 +11,27 @@
 
     <ImageView
         android:id="@+id/UserImg"
-        android:layout_width="150dp"
+        android:layout_width="0dp"
+        android:layout_weight="4"
         android:layout_height="150dp" />
+
 
     <TextView
 
         android:id="@+id/UserName"
-        android:layout_width="130dp"
+        android:layout_width="0dp"
         android:layout_height="46dp"
+        android:layout_weight="3"
         android:text="Name" />
 
     <TextView
         android:id="@+id/Score"
-        android:layout_width="102dp"
+        android:layout_weight="2"
+        android:layout_width="0dp"
         android:layout_height="47dp"
         android:text="Score" />
 
-
-
-
 </LinearLayout>
+
+
+
