--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -11,24 +11,24 @@
 
     <ImageView
         android:id="@+id/UserImg"
-        android:layout_width="0dp"
-        android:layout_weight="4"
-        android:layout_height="150dp" />
+        android:layout_width="100dp"
+        android:layout_height="100dp" />
 
 
     <TextView
 
         android:id="@+id/UserName"
-        android:layout_width="0dp"
-        android:layout_height="46dp"
-        android:layout_weight="3"
-        android:text="Name" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name"
+        android:layout_marginStart="16dp"
+        />
 
     <TextView
         android:id="@+id/Score"
-        android:layout_weight="2"
-        android:layout_width="0dp"
-        android:layout_height="47dp"
+        android:layout_marginStart="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Score" />
 
 </LinearLayout>
